I take the big L and change the module domain from a java-library to android-library so I can pass livedata through the domain layer ( not ideal, but lazy )

--- a/app/src/main/res/layout/article_creation_fragment.xml
+++ b/app/src/main/res/layout/article_creation_fragment.xml
@@ -69,6 +69,7 @@
                 <com.google.android.material.textfield.TextInputEditText
                         android:id="@+id/etArticlePrice"
                         android:layout_width="match_parent"
+                        android:inputType="number"
                         android:hint="@string/cijena"
                         android:layout_height="wrap_content"/>
 
