--- a/app/src/main/res/layout/item_article.xml
+++ b/app/src/main/res/layout/item_article.xml
@@ -3,12 +3,14 @@
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
         xmlns:tools="http://schemas.android.com/tools"
+        android:id="@+id/itemArticleRoot"
+        android:background="?android:attr/selectableItemBackground"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
     <androidx.appcompat.widget.AppCompatTextView
             android:id="@+id/tvArticleName"
-            style="@style/TextAppearance.MaterialComponents.Body1"
+            style="@style/TextAppearance.MaterialComponents.Body2"
             tools:text="Peka"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" app:layout_constraintStart_toStartOf="parent"
@@ -19,10 +21,10 @@
 
     <androidx.appcompat.widget.AppCompatTextView
             android:id="@+id/tvArticlePrice"
-            style="@style/TextAppearance.MaterialComponents.Body1"
+            style="@style/TextAppearance.MaterialComponents.Body2"
             tools:text="150 kn"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content" android:layout_marginEnd="48dp"
+            android:layout_height="wrap_content" android:layout_marginEnd="16dp"
             app:layout_constraintEnd_toStartOf="@+id/tvArticleQuantity"
             app:layout_constraintTop_toTopOf="@+id/tvArticleQuantity"
             app:layout_constraintBottom_toBottomOf="@+id/tvArticleQuantity"
@@ -30,12 +32,19 @@
 
     <androidx.appcompat.widget.AppCompatTextView
             android:id="@+id/tvArticleQuantity"
-            style="@style/TextAppearance.MaterialComponents.Body1"
+            style="@style/TextAppearance.MaterialComponents.Body2"
             tools:text="Kom"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" android:layout_marginEnd="16dp"
             app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="16dp"
             android:layout_marginTop="16dp"/>
+
+    <View
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:background="@color/light_gray"
+            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
