--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -24,7 +24,7 @@
         <item name="android:textColor">#000000</item>
     </style>
 
-    <style name="SpinnerDropDownStyle" parent="@style/Base.Widget.AppCompat.Spinner">
+    <style name="SpinnerDropDownStyle" parent="Widget.AppCompat.DropDownItem.Spinner">
         <item name="android:textColor">@android:color/white</item>
         <item name="android:background">@color/colorAccent</item>
         <item name="android:padding">8dp</item>
