--- a/app/src/main/res/layout/checkout_fragment.xml
+++ b/app/src/main/res/layout/checkout_fragment.xml
@@ -1,29 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-        xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:tools="http://schemas.android.com/tools"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
-        android:layout_width="match_parent" android:layout_height="match_parent"
-        tools:context=".ui.checkout.CheckoutFragment">
+<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools"
+        xmlns:app="http://schemas.android.com/apk/res-auto">
+    <data>
 
-    <androidx.appcompat.widget.AppCompatImageView
-            android:id="@+id/appLogo"
-            android:layout_width="wrap_content"
-            app:srcCompat="@drawable/ic_logo"
-            android:layout_height="wrap_content"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"/>
+    </data>
+    <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="match_parent" android:layout_height="match_parent"
+            tools:context=".ui.checkout.CheckoutFragment">
 
-    <androidx.appcompat.widget.AppCompatTextView
-            android:id="@+id/tvEmptyArticles"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/dodaj_artikl"
-            style="@style/EmptyScreenText" app:layout_constraintTop_toBottomOf="@+id/appLogo"
-            app:layout_constraintEnd_toEndOf="@+id/appLogo" app:layout_constraintStart_toStartOf="@+id/appLogo"
-            android:layout_marginTop="8dp"/>
+        <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/rvCheckoutList"
+                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"/>
 
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    </androidx.constraintlayout.widget.ConstraintLayout>
+</layout>
+
