--- a/app/src/main/res/layout/checkout_fragment.xml
+++ b/app/src/main/res/layout/checkout_fragment.xml
@@ -12,7 +12,18 @@
                 android:id="@+id/rvCheckoutList"
                 app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"/>
+                android:layout_height="0dp" app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintBottom_toTopOf="@+id/tvCheckoutPrice"/>
+
+        <androidx.appcompat.widget.AppCompatTextView
+                android:id="@+id/tvCheckoutPrice"
+                android:layout_width="wrap_content"
+                tools:text="Ukupno: 600kn"
+                style="@style/TextAppearance.MaterialComponents.Body1"
+                android:layout_height="wrap_content" app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"
+                android:layout_marginBottom="8dp"/>
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
