--- a/app/src/main/res/layout/bluetooth_fragment.xml
+++ b/app/src/main/res/layout/bluetooth_fragment.xml
@@ -1,14 +1,62 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout
-        xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:tools="http://schemas.android.com/tools"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        tools:context=".ui.bluetooth.BluetoothFragment">
+<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools"
+        xmlns:app="http://schemas.android.com/apk/res-auto">
+    <data>
 
-    <TextView
+    </data>
+    <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:text="Bluetooth"/>
+            tools:context=".ui.bluetooth.BluetoothFragment">
 
-</FrameLayout>
+        <androidx.appcompat.widget.AppCompatImageView
+                android:id="@+id/ivAddNewPrinter"
+                android:layout_width="wrap_content"
+                app:srcCompat="@drawable/ic_add_white_24dp"
+                android:tint="@color/light_gray"
+                android:layout_height="wrap_content" app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="16dp"
+                android:layout_marginStart="16dp"/>
+
+        <androidx.appcompat.widget.AppCompatTextView
+                android:id="@+id/tvPairNewPrinter"
+                android:layout_width="wrap_content"
+                style="@style/TextAppearance.MaterialComponents.Body2"
+                android:text="@string/pair_new_printer"
+                android:layout_height="wrap_content" app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintStart_toEndOf="@+id/ivAddNewPrinter" android:layout_marginStart="32dp"
+                android:layout_marginTop="8dp"/>
+
+        <androidx.appcompat.widget.AppCompatTextView
+                android:id="@+id/tvBluetoothTurnOn"
+                style="@style/TextAppearance.MaterialComponents.Caption"
+                android:text="@string/bluetooth_will_turn_on_to_pair"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" app:layout_constraintTop_toBottomOf="@+id/tvPairNewPrinter"
+                app:layout_constraintStart_toStartOf="@+id/tvPairNewPrinter"/>
+
+        <View
+                android:id="@+id/printSeparator"
+                android:layout_width="match_parent"
+                android:background="@color/light_gray"
+                android:layout_height="1dp"
+                app:layout_constraintTop_toBottomOf="@+id/tvBluetoothTurnOn" app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="8dp"/>
+
+        <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/rvAvailableBluetoothDevices"
+                android:layout_width="match_parent"
+                android:layout_height="0dp" app:layout_constraintTop_toBottomOf="@+id/printSeparator"
+                app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent"/>
+
+        <androidx.appcompat.widget.SwitchCompat
+                android:id="@+id/swBluetoothEnabled"
+                android:layout_width="wrap_content"
+                android:clickable="false"
+                android:layout_height="wrap_content" app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toTopOf="@+id/ivAddNewPrinter"
+                app:layout_constraintBottom_toBottomOf="@+id/ivAddNewPrinter" android:layout_marginEnd="16dp"/>
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+</layout>
