--- a/app/src/main/res/layout/articles_list_fragment.xml
+++ b/app/src/main/res/layout/articles_list_fragment.xml
@@ -23,6 +23,7 @@
                     android:id="@+id/fabArticleCreation"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    app:backgroundTint="@color/colorAccent"
                     app:layout_constraintEnd_toEndOf="parent"
                     android:layout_marginEnd="8dp"
                     android:layout_marginBottom="8dp"
