--- a/app/src/main/res/layout/bluetooth_fragment.xml
+++ b/app/src/main/res/layout/bluetooth_fragment.xml
@@ -53,6 +53,7 @@
             <androidx.recyclerview.widget.RecyclerView
                     android:id="@+id/rvAvailableBluetoothDevices"
                     android:layout_width="match_parent"
+                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                     android:layout_height="0dp" app:layout_constraintTop_toBottomOf="@+id/printSeparator"
                     app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintBottom_toBottomOf="parent"/>
@@ -64,6 +65,15 @@
                     android:layout_height="wrap_content" app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintTop_toTopOf="@+id/ivAddNewPrinter"
                     app:layout_constraintBottom_toBottomOf="@+id/ivAddNewPrinter" android:layout_marginEnd="16dp"/>
+
+            <androidx.core.widget.ContentLoadingProgressBar
+                    android:id="@+id/pbBluetooth"
+                    style="@style/Widget.AppCompat.ProgressBar"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content" app:layout_constraintEnd_toEndOf="@+id/printSeparator"
+                    app:layout_constraintStart_toStartOf="@+id/rvAvailableBluetoothDevices"
+                    android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/printSeparator"
+                    app:layout_constraintBottom_toBottomOf="parent"/>
 
         </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.coordinatorlayout.widget.CoordinatorLayout>
