--- a/app/src/main/res/layout/item_bluetooth.xml
+++ b/app/src/main/res/layout/item_bluetooth.xml
@@ -6,7 +6,8 @@
         app:cardUseCompatPadding="true"
         android:focusableInTouchMode="true"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:id="@+id/bluetoothItemRoot">
 
     <androidx.constraintlayout.widget.ConstraintLayout
             android:background="?android:attr/selectableItemBackground"
@@ -28,7 +29,8 @@
                 style="@style/TextAppearance.MaterialComponents.Caption"
                 tools:text="Sunmi Printer"
                 android:layout_height="wrap_content" app:layout_constraintTop_toBottomOf="@+id/tvBluetoothName"
-                app:layout_constraintStart_toStartOf="@+id/tvBluetoothName"/>
+                app:layout_constraintStart_toStartOf="@+id/tvBluetoothName"
+                app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="8dp"/>
 
         <androidx.appcompat.widget.AppCompatTextView
                 android:id="@+id/tvBluetoothAddress"
