--- a/app/src/main/res/layout/checkout_fragment.xml
+++ b/app/src/main/res/layout/checkout_fragment.xml
@@ -4,40 +4,47 @@
     <data>
 
     </data>
-    <androidx.constraintlayout.widget.ConstraintLayout
-            android:layout_width="match_parent" android:layout_height="match_parent"
-            tools:context=".ui.checkout.CheckoutFragment">
 
-        <androidx.recyclerview.widget.RecyclerView
-                android:id="@+id/rvCheckoutList"
-                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-                android:layout_width="match_parent"
-                android:layout_height="0dp" app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintBottom_toTopOf="@+id/tvCheckoutPrice"/>
+    <androidx.coordinatorlayout.widget.CoordinatorLayout
+            android:id="@+id/checkoutRoot"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
 
-        <androidx.appcompat.widget.AppCompatTextView
-                android:id="@+id/tvCheckoutPrice"
-                android:layout_width="wrap_content"
-                tools:text="Ukupno: 600kn"
-                style="@style/TextAppearance.MaterialComponents.Body1"
-                android:layout_height="wrap_content" app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"
-                android:layout_marginBottom="8dp"/>
+        <androidx.constraintlayout.widget.ConstraintLayout
+                android:layout_width="match_parent" android:layout_height="match_parent"
+                tools:context=".ui.checkout.CheckoutFragment">
 
-        <com.google.android.material.floatingactionbutton.FloatingActionButton
-                android:id="@+id/fabPrint"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                app:backgroundTint="@color/colorAccent"
-                app:layout_constraintEnd_toEndOf="parent"
-                android:layout_marginEnd="8dp"
-                android:visibility="gone"
-                android:layout_marginBottom="8dp"
-                android:elevation="4dp"
-                android:src="@drawable/ic_print_24dp"
-                app:layout_constraintBottom_toBottomOf="parent"/>
+            <androidx.recyclerview.widget.RecyclerView
+                    android:id="@+id/rvCheckoutList"
+                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+                    android:layout_width="match_parent"
+                    android:layout_height="0dp" app:layout_constraintTop_toTopOf="parent"
+                    app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintBottom_toTopOf="@+id/tvCheckoutPrice"/>
 
-    </androidx.constraintlayout.widget.ConstraintLayout>
+            <androidx.appcompat.widget.AppCompatTextView
+                    android:id="@+id/tvCheckoutPrice"
+                    android:layout_width="wrap_content"
+                    tools:text="Ukupno: 600kn"
+                    style="@style/TextAppearance.MaterialComponents.Body1"
+                    android:layout_height="wrap_content" app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"
+                    android:layout_marginBottom="8dp"/>
+
+            <com.google.android.material.floatingactionbutton.FloatingActionButton
+                    android:id="@+id/fabPrint"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    app:backgroundTint="@color/colorAccent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    android:layout_marginEnd="8dp"
+                    android:visibility="gone"
+                    android:layout_marginBottom="8dp"
+                    android:elevation="4dp"
+                    android:src="@drawable/ic_print_24dp"
+                    app:layout_constraintBottom_toBottomOf="parent"/>
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
+    </androidx.coordinatorlayout.widget.CoordinatorLayout>
 </layout>
 
