--- a/app/src/main/res/layout/item_checkout.xml
+++ b/app/src/main/res/layout/item_checkout.xml
@@ -57,6 +57,10 @@
             <com.google.android.material.textfield.TextInputEditText
                     android:id="@+id/etCheckoutQuantity"
                     android:layout_width="match_parent"
+                    android:clickable="false"
+                    android:cursorVisible="false"
+                    android:focusable="false"
+                    android:focusableInTouchMode="false"
                     tools:text="1"
                     android:textAlignment="center"
                     android:inputType="number"
