--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -8,12 +8,12 @@
     <fragment
             android:id="@+id/navigation_checkout"
             android:name="com.example.paragonlite.ui.checkout.CheckoutFragment"
-            android:label="navigation_checkout"
+            android:label="ParagonLite"
             tools:layout="@layout/checkout_fragment"/>
     <fragment
             android:id="@+id/navigation_articles"
             android:name="com.example.paragonlite.ui.articles.preview.ArticlesListFragment"
-            android:label="navigation_articles"
+            android:label="ParagonLite"
             tools:layout="@layout/articles_list_fragment">
         <action
                 android:id="@+id/action_navigation_articles_to_articleCreation"
@@ -22,9 +22,9 @@
     <fragment
             android:id="@+id/navigation_bluetooth"
             android:name="com.example.paragonlite.ui.bluetooth.BluetoothFragment"
-            android:label="navigation_bluetooth"
+            android:label="ParagonLite"
             tools:layout="@layout/bluetooth_fragment"/>
     <fragment android:id="@+id/articleCreation"
               android:name="com.example.paragonlite.ui.articles.creation.ArticleCreationFragment"
-              android:label="article_creation_fragment" tools:layout="@layout/article_creation_fragment"/>
+              android:label="ParagonLite" tools:layout="@layout/article_creation_fragment"/>
 </navigation>
