--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -32,8 +32,9 @@
         <com.google.android.material.bottomnavigation.BottomNavigationView
                 android:id="@+id/bottom_nav"
                 android:layout_width="match_parent"
+                app:labelVisibilityMode="selected"
+                app:itemHorizontalTranslationEnabled="true"
                 android:layout_height="wrap_content"
-                app:fabAlignmentMode="center"
                 app:menu="@menu/bottom_nav"/>
 
     </LinearLayout>
