--- a/presentation/src/main/res/layout/articles_list_fragment.xml
+++ b/presentation/src/main/res/layout/articles_list_fragment.xml
@@ -19,16 +19,18 @@
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"/>
 
-            <com.google.android.material.floatingactionbutton.FloatingActionButton
+            <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
                     android:id="@+id/fabArticleCreation"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     app:backgroundTint="@color/colorAccent"
+                    app:iconTint="#ffffff"
                     app:layout_constraintEnd_toEndOf="parent"
                     android:layout_marginEnd="8dp"
+                    android:text="@string/dodaj_artikl"
+                    android:textColor="#ffffff"
+                    app:icon="@drawable/ic_add_white_24dp"
                     android:layout_marginBottom="8dp"
-                    android:elevation="4dp"
-                    android:src="@drawable/ic_add_white_24dp"
                     app:layout_constraintBottom_toBottomOf="parent"/>
 
         </androidx.constraintlayout.widget.ConstraintLayout>
