--- a/presentation/src/main/res/layout/checkout_fragment.xml
+++ b/presentation/src/main/res/layout/checkout_fragment.xml
@@ -39,6 +39,7 @@
                     app:iconTint="#ffffff"
                     app:layout_constraintEnd_toEndOf="parent"
                     android:layout_marginEnd="8dp"
+                    app:rippleColor="@android:color/transparent"
                     android:visibility="gone"
                     android:layout_marginBottom="8dp"
                     android:elevation="4dp"
