--- a/presentation/src/main/res/layout/no_bluetooth_devices_layout.xml
+++ b/presentation/src/main/res/layout/no_bluetooth_devices_layout.xml
@@ -14,10 +14,10 @@
             app:layout_constraintBottom_toBottomOf="parent"/>
 
     <androidx.appcompat.widget.AppCompatTextView
-            android:id="@+id/tvEmptyArticles"
+            android:id="@+id/tvEmptyBluetoothDevices"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/add_article"
+            android:text="@string/add_bluetooth_devices"
             style="@style/EmptyScreenText" app:layout_constraintTop_toBottomOf="@+id/appLogo"
             app:layout_constraintEnd_toEndOf="@+id/appLogo" app:layout_constraintStart_toStartOf="@+id/appLogo"
             android:layout_marginTop="8dp"/>
