--- a/presentation/src/main/res/layout/bluetooth_fragment.xml
+++ b/presentation/src/main/res/layout/bluetooth_fragment.xml
@@ -48,7 +48,8 @@
                     android:layout_height="1dp"
                     app:layout_constraintTop_toBottomOf="@+id/tvBluetoothTurnOn"
                     app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="8dp"/>
+                    app:layout_constraintStart_toStartOf="parent"
+                    android:layout_marginTop="8dp"/>
 
             <androidx.recyclerview.widget.RecyclerView
                     android:id="@+id/rvAvailableBluetoothDevices"
@@ -68,11 +69,30 @@
 
             <androidx.core.widget.ContentLoadingProgressBar
                     android:id="@+id/pbBluetooth"
-                    style="@style/Widget.AppCompat.ProgressBar"
+                    style="@style/Widget.AppCompat.ProgressBar.Horizontal"
+                    android:indeterminateOnly="true"
+                    android:layout_marginTop="-4dp"
+                    android:elevation="4dp"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:visibility="gone"
+                    app:layout_constraintTop_toBottomOf="@+id/tvBluetoothTurnOn"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"/>
+
+            <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
+                    android:id="@+id/fabActivateBluetoothSearch"
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content" app:layout_constraintEnd_toEndOf="@+id/printSeparator"
-                    app:layout_constraintStart_toStartOf="@+id/rvAvailableBluetoothDevices"
-                    android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/printSeparator"
+                    android:layout_height="wrap_content"
+                    app:backgroundTint="@color/colorAccent"
+                    app:iconTint="#ffffff"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:rippleColor="@android:color/transparent"
+                    android:layout_marginEnd="8dp"
+                    android:text="@string/start_search"
+                    android:textColor="#ffffff"
+                    app:icon="@drawable/ic_bluetooth_24dp"
+                    android:layout_marginBottom="8dp"
                     app:layout_constraintBottom_toBottomOf="parent"/>
 
         </androidx.constraintlayout.widget.ConstraintLayout>
