--- a/presentation/src/main/res/layout/item_checkout.xml
+++ b/presentation/src/main/res/layout/item_checkout.xml
@@ -93,6 +93,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 app:srcCompat="@drawable/ic_close_24dp"
+                android:padding="2dp"
                 android:layout_marginEnd="16dp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toTopOf="@+id/tiCheckoutQuantity"
