--- a/presentation/src/main/res/layout/item_bluetooth.xml
+++ b/presentation/src/main/res/layout/item_bluetooth.xml
@@ -17,40 +17,66 @@
         <androidx.appcompat.widget.AppCompatTextView
                 android:id="@+id/tvBluetoothName"
                 android:layout_width="wrap_content"
-                style="@style/TextAppearance.MaterialComponents.Body1"
+                style="@style/TextAppearance.MaterialComponents.Body2"
                 android:text="@string/printer_name"
                 android:layout_height="wrap_content" app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="8dp"
-                android:layout_marginStart="16dp"/>
+                android:layout_marginStart="16dp" app:layout_constraintHorizontal_bias="0.5"
+                app:layout_constraintEnd_toStartOf="@+id/tvBluetoothAddress"
+                app:layout_constraintHorizontal_chainStyle="spread_inside"/>
 
         <androidx.appcompat.widget.AppCompatTextView
                 android:id="@+id/tvBluetoothNameValue"
                 android:layout_width="wrap_content"
                 style="@style/TextAppearance.MaterialComponents.Caption"
+                android:textSize="10sp"
                 tools:text="Sunmi Printer"
                 android:layout_height="wrap_content" app:layout_constraintTop_toBottomOf="@+id/tvBluetoothName"
                 app:layout_constraintStart_toStartOf="@+id/tvBluetoothName"
-                app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="8dp"/>
+                app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="8dp"
+                tools:ignore="SmallSp"/>
 
         <androidx.appcompat.widget.AppCompatTextView
                 android:id="@+id/tvBluetoothAddress"
                 android:layout_width="wrap_content"
-                style="@style/TextAppearance.MaterialComponents.Body1"
+                style="@style/TextAppearance.MaterialComponents.Body2"
                 android:text="@string/mac_address"
                 android:layout_height="wrap_content"
                 app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="8dp"
-                android:layout_marginEnd="16dp"
-                app:layout_constraintEnd_toEndOf="parent"/>
+                app:layout_constraintStart_toEndOf="@+id/tvBluetoothName"
+                android:layout_marginStart="8dp" app:layout_constraintHorizontal_bias="0.5"
+                app:layout_constraintEnd_toStartOf="@+id/tvLastUpdated"/>
 
         <androidx.appcompat.widget.AppCompatTextView
                 android:id="@+id/tvBluetoothAdressValue"
                 android:layout_width="wrap_content"
+                android:textSize="10sp"
                 style="@style/TextAppearance.MaterialComponents.Caption"
                 tools:text="12:DE:FG:23:D2:23:44"
                 android:layout_height="wrap_content"
                 app:layout_constraintStart_toStartOf="@+id/tvBluetoothAddress"
                 app:layout_constraintEnd_toEndOf="@+id/tvBluetoothAddress" app:layout_constraintHorizontal_bias="1.0"
-                app:layout_constraintTop_toBottomOf="@+id/tvBluetoothAddress"/>
+                app:layout_constraintTop_toBottomOf="@+id/tvBluetoothAddress" tools:ignore="SmallSp"/>
+
+        <androidx.appcompat.widget.AppCompatTextView
+                android:id="@+id/tvLastUpdated"
+                android:layout_width="wrap_content"
+                style="@style/TextAppearance.MaterialComponents.Body2"
+                android:text="@string/last_updated"
+                android:layout_height="wrap_content"
+                app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.5"
+                android:layout_marginEnd="16dp"
+                app:layout_constraintStart_toEndOf="@+id/tvBluetoothAddress"
+                android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"/>
+
+        <androidx.appcompat.widget.AppCompatTextView
+                android:id="@+id/tvLastUpdatedValue"
+                android:layout_width="wrap_content"
+                android:textSize="10sp"
+                style="@style/TextAppearance.MaterialComponents.Caption"
+                tools:text="17.06.09"
+                android:layout_height="wrap_content" app:layout_constraintTop_toBottomOf="@+id/tvLastUpdated"
+                app:layout_constraintEnd_toEndOf="@+id/tvLastUpdated" tools:ignore="SmallSp"/>
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
