--- a/presentation/src/main/res/layout/history_fragment.xml
+++ b/presentation/src/main/res/layout/history_fragment.xml
@@ -67,5 +67,22 @@
                 app:layout_constraintStart_toStartOf="parent" app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/background"/>
 
+        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
+                android:id="@+id/fabPrint"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                app:backgroundTint="@color/colorAccent"
+                app:iconTint="#ffffff"
+                app:layout_constraintEnd_toEndOf="parent"
+                android:layout_marginEnd="8dp"
+                app:rippleColor="@android:color/transparent"
+                android:visibility="gone"
+                android:layout_marginBottom="8dp"
+                android:elevation="4dp"
+                android:text="@string/print"
+                android:textColor="#ffffff"
+                app:icon="@drawable/ic_print_24dp"
+                app:layout_constraintBottom_toBottomOf="parent"/>
+
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
