--- a/presentation/src/main/res/layout/item_receipt.xml
+++ b/presentation/src/main/res/layout/item_receipt.xml
@@ -8,7 +8,7 @@
             android:id="@+id/tvReceiptNumber"
             style="@style/TextAppearance.MaterialComponents.Body2"
             android:textSize="16sp"
-            tools:text="Peka"
+            tools:text="666"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" app:layout_constraintBottom_toBottomOf="parent"
@@ -16,7 +16,7 @@
 
     <androidx.appcompat.widget.AppCompatTextView
             android:id="@+id/tvReceiptDate"
-            style="@style/TextAppearance.MaterialComponents.Body1"
+            style="@style/TextAppearance.MaterialComponents.Caption"
             android:textSize="16sp"
             tools:text="25.04.2019"
             android:layout_width="wrap_content"
@@ -28,7 +28,7 @@
 
     <androidx.appcompat.widget.AppCompatTextView
             android:id="@+id/tvReceiptAmount"
-            style="@style/TextAppearance.MaterialComponents.Body1"
+            style="@style/TextAppearance.MaterialComponents.Caption"
             android:textSize="16sp"
             tools:text="450.00kn"
             android:layout_width="wrap_content"
