--- a/presentation/src/main/res/layout/articles_list_fragment.xml
+++ b/presentation/src/main/res/layout/articles_list_fragment.xml
@@ -33,6 +33,36 @@
                     android:layout_marginBottom="8dp"
                     app:layout_constraintBottom_toBottomOf="parent"/>
 
+            <androidx.constraintlayout.widget.Group
+                    android:id="@+id/noArticleGroup"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    app:constraint_referenced_ids="appLogo, tvEmptyArticles"
+                    android:visibility="gone"/>
+
+            <androidx.appcompat.widget.AppCompatImageView
+                    android:id="@+id/appLogo"
+                    android:layout_width="wrap_content"
+                    app:srcCompat="@drawable/ic_logo"
+                    android:layout_height="wrap_content"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:layout_constraintBottom_toBottomOf="parent"/>
+
+            <androidx.appcompat.widget.AppCompatTextView
+                    android:id="@+id/tvEmptyArticles"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/no_articles_create_new"
+                    android:lines="2"
+                    android:gravity="center_horizontal"
+                    android:layout_gravity="center_horizontal"
+                    style="@style/EmptyScreenText"
+                    app:layout_constraintTop_toBottomOf="@+id/appLogo"
+                    app:layout_constraintEnd_toEndOf="@+id/appLogo" app:layout_constraintStart_toStartOf="@+id/appLogo"
+                    android:layout_marginTop="8dp"/>
+
         </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.coordinatorlayout.widget.CoordinatorLayout>
 </layout>
