--- a/presentation/src/main/res/layout/bluetooth_fragment.xml
+++ b/presentation/src/main/res/layout/bluetooth_fragment.xml
@@ -95,6 +95,32 @@
                     android:layout_marginBottom="8dp"
                     app:layout_constraintBottom_toBottomOf="parent"/>
 
+            <androidx.constraintlayout.widget.Group
+                    android:id="@+id/noBluetoothGroup"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    app:constraint_referenced_ids="appLogo,tvEmptyBluetoothDevices"
+                    android:visibility="gone"/>
+
+            <androidx.appcompat.widget.AppCompatImageView
+                    android:id="@+id/appLogo"
+                    android:layout_width="wrap_content"
+                    app:srcCompat="@drawable/ic_logo"
+                    android:layout_height="wrap_content"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:layout_constraintBottom_toBottomOf="parent"/>
+
+            <androidx.appcompat.widget.AppCompatTextView
+                    android:id="@+id/tvEmptyBluetoothDevices"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/add_bluetooth_devices"
+                    style="@style/EmptyScreenText" app:layout_constraintTop_toBottomOf="@+id/appLogo"
+                    app:layout_constraintEnd_toEndOf="@+id/appLogo" app:layout_constraintStart_toStartOf="@+id/appLogo"
+                    android:layout_marginTop="8dp"/>
+
         </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.coordinatorlayout.widget.CoordinatorLayout>
 </layout>
