--- a/presentation/src/main/res/layout/bluetooth_fragment.xml
+++ b/presentation/src/main/res/layout/bluetooth_fragment.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools"
-        xmlns:app="http://schemas.android.com/apk/res-auto">
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        xmlns:tools="http://schemas.android.com/tools">
+
     <data>
 
     </data>
@@ -18,108 +20,147 @@
             <androidx.appcompat.widget.AppCompatImageView
                     android:id="@+id/ivAddNewPrinter"
                     android:layout_width="wrap_content"
-                    app:srcCompat="@drawable/ic_add_white_24dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="16dp"
+                    android:layout_marginTop="16dp"
                     android:tint="@color/light_gray"
-                    android:layout_height="wrap_content" app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="16dp"
-                    android:layout_marginStart="16dp"/>
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:srcCompat="@drawable/ic_add_white_24dp" />
 
             <androidx.appcompat.widget.AppCompatTextView
                     android:id="@+id/tvPairNewPrinter"
-                    android:layout_width="wrap_content"
                     style="@style/TextAppearance.MaterialComponents.Body2"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="32dp"
+                    android:layout_marginTop="8dp"
                     android:text="@string/pair_new_printer"
-                    android:layout_height="wrap_content" app:layout_constraintTop_toTopOf="parent"
-                    app:layout_constraintStart_toEndOf="@+id/ivAddNewPrinter" android:layout_marginStart="32dp"
-                    android:layout_marginTop="8dp"/>
+                    app:layout_constraintStart_toEndOf="@+id/ivAddNewPrinter"
+                    app:layout_constraintTop_toTopOf="parent" />
 
             <androidx.appcompat.widget.AppCompatTextView
                     android:id="@+id/tvBluetoothTurnOn"
                     style="@style/TextAppearance.MaterialComponents.Caption"
-                    android:text="@string/bluetooth_will_turn_on_to_pair"
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content" app:layout_constraintTop_toBottomOf="@+id/tvPairNewPrinter"
-                    app:layout_constraintStart_toStartOf="@+id/tvPairNewPrinter"/>
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="4dp"
+                    android:text="@string/bluetooth_will_turn_on_to_pair"
+                    app:layout_constraintStart_toStartOf="@+id/tvPairNewPrinter"
+                    app:layout_constraintTop_toBottomOf="@+id/tvPairNewPrinter" />
 
             <View
                     android:id="@+id/printSeparator"
                     android:layout_width="match_parent"
-                    android:background="@color/light_gray"
                     android:layout_height="1dp"
-                    app:layout_constraintTop_toBottomOf="@+id/tvBluetoothTurnOn"
+                    android:layout_marginTop="8dp"
+                    android:background="@color/light_gray"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
-                    android:layout_marginTop="8dp"/>
+                    app:layout_constraintTop_toBottomOf="@+id/tvBluetoothTurnOn" />
 
             <androidx.recyclerview.widget.RecyclerView
                     android:id="@+id/rvAvailableBluetoothDevices"
                     android:layout_width="match_parent"
+                    android:layout_height="0dp"
                     app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-                    android:layout_height="0dp" app:layout_constraintTop_toBottomOf="@+id/printSeparator"
-                    app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintBottom_toBottomOf="parent"/>
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/printSeparator" />
 
             <androidx.appcompat.widget.SwitchCompat
                     android:id="@+id/swBluetoothEnabled"
                     android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginEnd="16dp"
+                    android:layout_marginBottom="8dp"
                     android:clickable="false"
-                    android:layout_height="wrap_content" app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintTop_toTopOf="@+id/ivAddNewPrinter"
-                    app:layout_constraintBottom_toBottomOf="@+id/ivAddNewPrinter" android:layout_marginEnd="16dp"/>
+                    app:layout_constraintBottom_toTopOf="@+id/tvBluetoothStatus"
+                    app:layout_constraintEnd_toEndOf="@+id/tvBluetoothStatus"
+                    app:layout_constraintStart_toStartOf="@+id/tvBluetoothStatus"
+                    app:layout_constraintTop_toTopOf="@+id/ivAddNewPrinter" />
+
+            <androidx.appcompat.widget.AppCompatTextView
+                    android:id="@+id/tvBluetoothStatus"
+                    style="@style/TextAppearance.MaterialComponents.Caption"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginEnd="16dp"
+                    android:text="@string/bluetooth_status"
+                    app:layout_constraintBottom_toBottomOf="@+id/tvBluetoothTurnOn"
+                    app:layout_constraintEnd_toEndOf="parent" />
 
             <androidx.core.widget.ContentLoadingProgressBar
                     android:id="@+id/pbBluetooth"
                     style="@style/Widget.AppCompat.ProgressBar.Horizontal"
-                    android:indeterminateOnly="true"
-                    android:layout_marginTop="-4dp"
-                    android:elevation="4dp"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:layout_marginTop="-4dp"
+                    android:elevation="4dp"
+                    android:indeterminateOnly="true"
                     android:visibility="gone"
-                    app:layout_constraintTop_toBottomOf="@+id/tvBluetoothTurnOn"
                     app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintStart_toStartOf="parent"/>
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/tvBluetoothTurnOn" />
 
             <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
                     android:id="@+id/fabActivateBluetoothSearch"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    app:backgroundTint="@color/colorAccent"
-                    app:iconTint="#ffffff"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:rippleColor="@android:color/transparent"
                     android:layout_marginEnd="8dp"
+                    android:layout_marginBottom="8dp"
                     android:text="@string/start_search"
                     android:textColor="#ffffff"
+                    app:backgroundTint="@color/colorAccent"
                     app:icon="@drawable/ic_bluetooth_24dp"
-                    android:layout_marginBottom="8dp"
-                    app:layout_constraintBottom_toBottomOf="parent"/>
+                    app:iconTint="#ffffff"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:rippleColor="@android:color/transparent" />
 
             <androidx.constraintlayout.widget.Group
                     android:id="@+id/noBluetoothGroup"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    app:constraint_referenced_ids="appLogo,tvEmptyBluetoothDevices"
-                    android:visibility="gone"/>
+                    android:visibility="gone"
+                    app:constraint_referenced_ids="appLogo,tvEmptyBluetoothDevices" />
 
             <androidx.appcompat.widget.AppCompatImageView
                     android:id="@+id/appLogo"
                     android:layout_width="wrap_content"
-                    app:srcCompat="@drawable/ic_logo"
                     android:layout_height="wrap_content"
+                    app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent"
-                    app:layout_constraintBottom_toBottomOf="parent"/>
+                    app:srcCompat="@drawable/ic_logo" />
 
             <androidx.appcompat.widget.AppCompatTextView
                     android:id="@+id/tvEmptyBluetoothDevices"
+                    style="@style/EmptyScreenText"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="24dp"
+                    android:layout_marginTop="8dp"
+                    android:layout_marginEnd="24dp"
+                    android:gravity="center"
+                    android:text="@string/add_bluetooth_devices"
+                    android:textAlignment="center"
+                    android:visibility="visible"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/appLogo" />
+
+            <com.google.android.material.button.MaterialButton
+                    android:id="@+id/btnEnableBluetooth"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="@string/add_bluetooth_devices"
-                    style="@style/EmptyScreenText" app:layout_constraintTop_toBottomOf="@+id/appLogo"
-                    app:layout_constraintEnd_toEndOf="@+id/appLogo" app:layout_constraintStart_toStartOf="@+id/appLogo"
-                    android:layout_marginTop="8dp"/>
+                    android:text="@string/enable_bluetooth"
+                    app:cornerRadius="8dp"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="@+id/rvAvailableBluetoothDevices"
+                    app:layout_constraintTop_toBottomOf="@+id/tvEmptyBluetoothDevices" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.coordinatorlayout.widget.CoordinatorLayout>
