--- a/presentation/src/main/res/layout/checkout_fragment.xml
+++ b/presentation/src/main/res/layout/checkout_fragment.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools"
-        xmlns:app="http://schemas.android.com/apk/res-auto">
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        xmlns:tools="http://schemas.android.com/tools">
+
     <data>
 
     </data>
@@ -11,68 +13,92 @@
             android:layout_height="match_parent">
 
         <androidx.constraintlayout.widget.ConstraintLayout
-                android:layout_width="match_parent" android:layout_height="match_parent"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
                 tools:context=".ui.checkout.CheckoutFragment">
 
             <androidx.recyclerview.widget.RecyclerView
                     android:id="@+id/rvCheckoutList"
-                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                     android:layout_width="match_parent"
-                    android:layout_height="0dp" app:layout_constraintTop_toTopOf="parent"
-                    app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintBottom_toTopOf="@+id/tvCheckoutPrice"/>
+                    android:layout_height="0dp"
+                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+                    app:layout_constraintBottom_toTopOf="@+id/tvCheckoutPrice"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent" />
 
-            <androidx.appcompat.widget.AppCompatTextView
+            <TextSwitcher
                     android:id="@+id/tvCheckoutPrice"
-                    android:layout_width="wrap_content"
-                    tools:text="Ukupno: 600kn"
                     style="@style/TextAppearance.MaterialComponents.Body1"
-                    android:layout_height="wrap_content" app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"
-                    android:layout_marginBottom="8dp"/>
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="16dp"
+                    android:layout_marginBottom="4dp"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    tools:text="Ukupno: 600kn">
+
+                <TextView
+                        style="@style/TextAppearance.MaterialComponents.Body1"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginStart="16dp"
+                        android:layout_marginBottom="8dp"
+                        tools:text="Ukupno: 600kn" />
+
+                <TextView
+                        style="@style/TextAppearance.MaterialComponents.Body1"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginStart="16dp"
+                        android:layout_marginBottom="8dp"
+                        tools:text="Ukupno: 600kn" />
+            </TextSwitcher>
 
             <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
                     android:id="@+id/fabPrint"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    app:backgroundTint="@color/colorAccent"
-                    app:iconTint="#ffffff"
-                    app:layout_constraintEnd_toEndOf="parent"
                     android:layout_marginEnd="8dp"
-                    app:rippleColor="@android:color/transparent"
-                    android:visibility="gone"
                     android:layout_marginBottom="8dp"
                     android:elevation="4dp"
                     android:text="@string/print"
                     android:textColor="#ffffff"
+                    android:visibility="gone"
+                    app:backgroundTint="@color/colorAccent"
                     app:icon="@drawable/ic_print_24dp"
-                    app:layout_constraintBottom_toBottomOf="parent"/>
+                    app:iconTint="#ffffff"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:rippleColor="@android:color/transparent" />
 
             <androidx.constraintlayout.widget.Group
                     android:id="@+id/noCheckoutGroup"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    app:constraint_referenced_ids="appLogo,tvEmptyArticles"
-                    android:visibility="visible"/>
+                    android:visibility="visible"
+                    app:constraint_referenced_ids="appLogo,tvEmptyArticles" />
 
             <androidx.appcompat.widget.AppCompatImageView
                     android:id="@+id/appLogo"
                     android:layout_width="wrap_content"
-                    app:srcCompat="@drawable/ic_logo"
                     android:layout_height="wrap_content"
+                    app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent"
-                    app:layout_constraintBottom_toBottomOf="parent"/>
+                    app:srcCompat="@drawable/ic_logo" />
 
             <androidx.appcompat.widget.AppCompatTextView
                     android:id="@+id/tvEmptyArticles"
+                    style="@style/EmptyScreenText"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_marginTop="8dp"
                     android:text="@string/add_article"
-                    style="@style/EmptyScreenText" app:layout_constraintTop_toBottomOf="@+id/appLogo"
-                    app:layout_constraintEnd_toEndOf="@+id/appLogo" app:layout_constraintStart_toStartOf="@+id/appLogo"
-                    android:layout_marginTop="8dp"/>
+                    app:layout_constraintEnd_toEndOf="@+id/appLogo"
+                    app:layout_constraintStart_toStartOf="@+id/appLogo"
+                    app:layout_constraintTop_toBottomOf="@+id/appLogo" />
 
 
         </androidx.constraintlayout.widget.ConstraintLayout>
